[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
colorama = "^0.4.6"
pyfiglet = "^0.8.post1"
questionary = "^2.0.0"
requests = "^2.31.0"
cowsay = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"